--- a/pos_app/templates/pos_app/base.html
+++ b/pos_app/templates/pos_app/base.html
@@ -488,10 +488,13 @@
             {% endif %}
             
             <li class="nav-item mt-4">
-                <a href="{% url 'logout' %}" class="nav-link">
-                    <i class="bi bi-box-arrow-right"></i>
-                    <span>Logout</span>
-                </a>
+                <form action="{% url 'logout' %}" method="post" style="display:inline;">
+                    {% csrf_token %}
+                    <button type="submit" class="nav-link" style="border: none; background: none; padding: 0;">
+                        <i class="bi bi-box-arrow-right"></i>
+                        <span>Logout</span>
+                    </button>
+                </form>
             </li>
         </ul>
     </div>
