--- a/pos_app/templates/pos_app/sale_detail.html
+++ b/pos_app/templates/pos_app/sale_detail.html
@@ -43,7 +43,13 @@
                 </tbody>
             </table>
 
-            <a href="{% url 'sales_list' %}" class="btn btn-primary mt-3">Back to Sales List</a>
+            <div class="d-flex justify-content-between mt-4">
+                <a href="{% url 'sales_list' %}" class="btn btn-primary">Back to Sales List</a>
+                <div>
+                    <a href="{% url 'sale_void' sale.id %}" class="btn btn-warning" onclick="return confirm('Are you sure you want to void this sale?');">Void Sale</a>
+                    <a href="{% url 'sale_refund' sale.id %}" class="btn btn-danger" onclick="return confirm('Are you sure you want to refund this sale?');">Refund Sale</a>
+                </div>
+            </div>
         </div>
     </div>
 </div>
