--- a/pos_app/templates/pos_app/purchase_item_form.html
+++ b/pos_app/templates/pos_app/purchase_item_form.html
@@ -8,7 +8,7 @@
     <div class="d-flex justify-content-between align-items-center mb-4">
         <h1 class="h3 mb-0 text-gray-800">Edit Purchase Item for Purchase #{{ item.purchase.id }}</h1>
         <div>
-            <a href="{% url 'purchase_add_items' item.purchase.id %}" class="btn btn-outline-secondary">
+            <a href="{% url 'pos:purchase_add_items' item.purchase.id %}" class="btn btn-outline-secondary">
                 <i class="fas fa-arrow-left me-1"></i> Back to Items
             </a>
         </div>
