--- a/pos_app/templates/pos_app/business_setup.html
+++ b/pos_app/templates/pos_app/business_setup.html
@@ -123,7 +123,7 @@
                 {% endfor %}
             {% endif %}
             
-            <form method="post" action="{% url 'business_setup' %}" enctype="multipart/form-data">
+            <form method="post" action="{% url 'pos:business_setup' %}" enctype="multipart/form-data">
                 {% csrf_token %}
                 
                 <div class="mb-3">
