--- a/pos_app/templates/pos_app/expenses.html
+++ b/pos_app/templates/pos_app/expenses.html
@@ -7,7 +7,7 @@
     <div class="d-flex justify-content-between align-items-center mb-4">
         <h1 class="h3 mb-0 text-gray-800">Expenses</h1>
         <div>
-            <a href="{% url 'expense_create' %}" class="btn btn-primary">
+            <a href="{% url 'pos:expense_create' %}" class="btn btn-primary">
                 <i class="fas fa-plus-circle me-1"></i> Add Expense
             </a>
         </div>
@@ -46,7 +46,7 @@
                     <button type="submit" class="btn btn-primary me-2">
                         <i class="fas fa-search me-1"></i> Filter
                     </button>
-                    <a href="{% url 'expense_list' %}" class="btn btn-outline-secondary">Reset</a>
+                    <a href="{% url 'pos:expense_list' %}" class="btn btn-outline-secondary">Reset</a>
                 </div>
             </form>
         </div>
@@ -74,10 +74,10 @@
                                 <td>{{ expense.description }}</td>
                                 <td>{{ business.currency_symbol }} {{ expense.amount|floatformat:2 }}</td>
                                 <td>
-                                    <a href="{% url 'expense_edit' expense.id %}" class="btn btn-sm btn-warning">
+                                    <a href="{% url 'pos:expense_edit' expense.id %}" class="btn btn-sm btn-warning">
                                         <i class="fas fa-edit"></i> Edit
                                     </a>
-                                    <a href="{% url 'expense_delete' expense.id %}" class="btn btn-sm btn-danger" onclick="return confirm('Are you sure you want to delete this expense?');">
+                                    <a href="{% url 'pos:expense_delete' expense.id %}" class="btn btn-sm btn-danger" onclick="return confirm('Are you sure you want to delete this expense?');">
                                         <i class="fas fa-trash"></i> Delete
                                     </a>
                                     
