--- a/pos_app/templates/pos_app/inventory.html
+++ b/pos_app/templates/pos_app/inventory.html
@@ -7,7 +7,7 @@
     <div class="d-flex justify-content-between align-items-center mb-4">
         <h1 class="h3 mb-0 text-gray-800">Inventory List</h1>
         <div>
-            <a href="{% url 'inventory_adjust' %}" class="btn btn-primary">
+            <a href="{% url 'pos:inventory_adjust' %}" class="btn btn-primary">
                 <i class="fas fa-boxes me-1"></i> Adjust Stock
             </a>
         </div>
@@ -47,7 +47,7 @@
                     <button type="submit" class="btn btn-primary me-2">
                         <i class="fas fa-search me-1"></i> Filter
                     </button>
-                    <a href="{% url 'inventory_list' %}" class="btn btn-outline-secondary">
+                    <a href="{% url 'pos:inventory_list' %}" class="btn btn-outline-secondary">
                         <i class="fas fa-undo me-1"></i> Reset
                     </a>
                 </div>
