--- a/pos_app/templates/pos_app/purchase_add_items.html
+++ b/pos_app/templates/pos_app/purchase_add_items.html
@@ -8,7 +8,7 @@
     <div class="d-flex justify-content-between align-items-center mb-4">
         <h1 class="h3 mb-0 text-gray-800">Add Items to Purchase #{{ purchase.id }}</h1>
         <div>
-            <a href="{% url 'purchase_list' %}" class="btn btn-outline-secondary">
+            <a href="{% url 'pos:purchase_list' %}" class="btn btn-outline-secondary">
                 <i class="fas fa-arrow-left me-1"></i> Back to Purchases
             </a>
         </div>
@@ -96,12 +96,12 @@
                                         </button>
                                         <ul class="dropdown-menu dropdown-menu-end">
                                             <li>
-                                                <a class="dropdown-item" href="{% url 'purchase_item_edit' item.id %}">
+                                                <a class="dropdown-item" href="{% url 'pos:purchase_item_edit' item.id %}">
                                                     <i class="fas fa-edit me-1"></i> Edit
                                                 </a>
                                             </li>
                                             <li>
-                                                <a class="dropdown-item text-danger" href="{% url 'purchase_item_delete' item.id %}" onclick="return confirm('Are you sure you want to delete this item?');">
+                                                <a class="dropdown-item text-danger" href="{% url 'pos:purchase_item_delete' item.id %}" onclick="return confirm('Are you sure you want to delete this item?');">
                                                     <i class="fas fa-trash-alt me-1"></i> Delete
                                                 </a>
                                             </li>
