--- a/pos_app/templates/pos_app/purchase_receive.html
+++ b/pos_app/templates/pos_app/purchase_receive.html
@@ -7,7 +7,7 @@
     <div class="d-flex justify-content-between align-items-center mb-4">
         <h1 class="h3 mb-0 text-gray-800">Receive Purchase #{{ purchase.id }}</h1>
         <div>
-            <a href="{% url 'purchase_list' %}" class="btn btn-outline-secondary">
+            <a href="{% url 'pos:purchase_list' %}" class="btn btn-outline-secondary">
                 <i class="fas fa-arrow-left me-1"></i> Back to Purchases
             </a>
         </div>
