--- a/pos_app/templates/pos_app/receipt.html
+++ b/pos_app/templates/pos_app/receipt.html
@@ -248,7 +248,7 @@
             <button onclick="window.print()" class="btn btn-primary">
                 <i class="fas fa-print me-1"></i> Print
             </button>
-            <a href="{% url 'pos' %}" class="btn btn-secondary">
+            <a href="{% url 'pos:pos' %}" class="btn btn-secondary">
                 <i class="fas fa-arrow-left me-1"></i> Back to POS
             </a>
         </div>
