--- a/pos_app/templates/pos_app/reports.html
+++ b/pos_app/templates/pos_app/reports.html
@@ -7,10 +7,10 @@
     <div class="d-flex justify-content-between align-items-center mb-4">
         <h1 class="h3 mb-0 text-gray-800">Reports</h1>
         <div>
-            <a href="{% url 'export_sales_report' %}" class="btn btn-outline-success me-2">
+            <a href="{% url 'pos:export_sales_report' %}" class="btn btn-outline-success me-2">
                 <i class="fas fa-file-export me-1"></i> Export Sales Report
             </a>
-            <a href="{% url 'export_inventory_report' %}" class="btn btn-outline-success">
+            <a href="{% url 'pos:export_inventory_report' %}" class="btn btn-outline-success">
                 <i class="fas fa-file-export me-1"></i> Export Inventory Report
             </a>
         </div>
