--- a/pos_app/templates/pos_app/sale_detail.html
+++ b/pos_app/templates/pos_app/sale_detail.html
@@ -44,11 +44,11 @@
             </table>
 
             <div class="d-flex justify-content-between mt-4">
-                <a href="{% url 'sales_list' %}" class="btn btn-primary">Back to Sales List</a>
+                <a href="{% url 'pos:sales_list' %}" class="btn btn-primary">Back to Sales List</a>
                 <div>
-                    <a href="{% url 'sale_void' sale.id %}" class="btn btn-warning" onclick="return confirm('Are you sure you want to void this sale?');">Void Sale</a>
-                    <a href="{% url 'sale_refund' sale.id %}" class="btn btn-danger" onclick="return confirm('Are you sure you want to refund this sale?');">Refund Sale</a>
-                    <a href="{% url 'get_receipt' sale.id %}" class="btn btn-info">View Receipt</a> <!-- Link to view the receipt -->
+                    <a href="{% url 'pos:sale_void' sale.id %}" class="btn btn-warning" onclick="return confirm('Are you sure you want to void this sale?');">Void Sale</a>
+                    <a href="{% url 'pos:sale_refund' sale.id %}" class="btn btn-danger" onclick="return confirm('Are you sure you want to refund this sale?');">Refund Sale</a>
+                    <a href="{% url 'pos:get_receipt' sale.id %}" class="btn btn-info">View Receipt</a> <!-- Link to view the receipt -->
                 </div>
             </div>
         </div>
