--- a/pos_app/templates/pos_app/sale_refund.html
+++ b/pos_app/templates/pos_app/sale_refund.html
@@ -55,7 +55,7 @@
                 </table>
 
                 <button type="submit" class="btn btn-danger mt-3">Process Refund</button>
-                <a href="{% url 'sale_detail' sale.id %}" class="btn btn-secondary mt-3">Cancel</a>
+                <a href="{% url 'pos:sale_detail' sale.id %}" class="btn btn-secondary mt-3">Cancel</a>
             </form>
         </div>
     </div>
