--- a/pos_app/templates/pos_app/sale_void.html
+++ b/pos_app/templates/pos_app/sale_void.html
@@ -20,7 +20,7 @@
                 <p>This action cannot be undone. All items will be returned to inventory.</p>
 
                 <button type="submit" class="btn btn-danger">Void Sale</button>
-                <a href="{% url 'sale_detail' sale.id %}" class="btn btn-secondary">Cancel</a>
+                <a href="{% url 'pos:sale_detail' sale.id %}" class="btn btn-secondary">Cancel</a>
             </form>
         </div>
     </div>
