--- a/pos_app/templates/pos_app/supplier_form.html
+++ b/pos_app/templates/pos_app/supplier_form.html
@@ -8,7 +8,7 @@
     <div class="d-flex justify-content-between align-items-center mb-4">
         <h1 class="h3 mb-0 text-gray-800">{{ title }}</h1>
         <div>
-            <a href="{% url 'supplier_list' %}" class="btn btn-outline-secondary">
+            <a href="{% url 'pos:supplier_list' %}" class="btn btn-outline-secondary">
                 <i class="fas fa-arrow-left me-1"></i> Back to Suppliers
             </a>
         </div>
@@ -68,7 +68,7 @@
                 </div>
 
                 <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                    <a href="{% url 'supplier_list' %}" class="btn btn-outline-secondary">Cancel</a>
+                    <a href="{% url 'pos:supplier_list' %}" class="btn btn-outline-secondary">Cancel</a>
                     <button type="submit" class="btn btn-primary">
                         <i class="fas fa-save me-1"></i> Save Supplier
                     </button>
