--- a/pos_app/templates/pos_app/suppliers.html
+++ b/pos_app/templates/pos_app/suppliers.html
@@ -8,7 +8,7 @@
         <h1 class="h3 mb-0 text-gray-800">Suppliers</h1>
         <div>
             {% if role == 'owner' or role == 'admin' or role == 'manager' %}
-            <a href="{% url 'supplier_create' %}" class="btn btn-primary">
+            <a href="{% url 'pos:supplier_create' %}" class="btn btn-primary">
                 <i class="fas fa-plus-circle me-1"></i> Add Supplier
             </a>
             {% endif %}
@@ -51,12 +51,12 @@
                                         <ul class="dropdown-menu dropdown-menu-end">
                                             {% if role == 'owner' or role == 'admin' or role == 'manager' %}
                                                 <li>
-                                                    <a class="dropdown-item" href="{% url 'supplier_edit' supplier.id %}">
+                                                    <a class="dropdown-item" href="{% url 'pos:supplier_edit' supplier.id %}">
                                                         <i class="fas fa-edit me-1"></i> Edit
                                                     </a>
                                                 </li>
                                                 <li>
-                                                    <a class="dropdown-item text-danger" href="{% url 'supplier_delete' supplier.id %}" onclick="return confirm('Are you sure you want to delete this supplier?');">
+                                                    <a class="dropdown-item text-danger" href="{% url 'pos:supplier_delete' supplier.id %}" onclick="return confirm('Are you sure you want to delete this supplier?');">
                                                         <i class="fas fa-trash-alt me-1"></i> Delete
                                                     </a>
                                                 </li>
